js/js.translator/testData/incremental/invalidation/crossModuleModifyClassAncestors/libD/d.kt
class D : C() {
    override fun f1(): String = "W"
}